--- a/PSG-Festival Menu.html
+++ b/PSG-Festival Menu.html
@@ -76,7 +76,7 @@ h2 {
         <li><a href="FAQs.html">- FAQs -</a></li>
     </ul>
    </nav>
-   <h2>🎥 Recent video !</h2>  
+   <h2>🎥 Intro </h2>  
    <div id="box1"></div>
    <main>
     <div class="video-container">
